force-app/main/default/objects/custom_create134__c/custom_create134__c.object-meta.xml
<CustomObject>
    <label>Custom created object134</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects134</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>