force-app/main/default/objects/custom_create134__c/fields/custom_create_134field519__c.field-meta.xml
<CustomField>
    <fullName>custom_create_134field519__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 134field519</label>
    <type>Checkbox</type>
</CustomField>